assets/css/style.css
/* Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Roboto+Slab&display=swap');

*{
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: 'Roboto Condensed', sans-serif;
    background: #CBF1FB;
}

/* Logo, Menu and Headings */
header {
    background-color: #65B3C7;
    width: 100%;
    height: 100px;
}

h1, h2 {
    font-family: 'Roboto Slab', sans-serif;
    color: #244047;
}

h2 {
    font-size: 125%;
}

/* turn logo into a circle */
#logo {
    border-radius: 50%;
    text-align: center;
    width: 100px;
    height: 100px;
    padding: 20px;
    line-height: 100px;
    float: left;
    font-size: 250%;
    text-decoration: overline;
    color: #C7A552;
    background-color: white;
    border: #C78979 double 7px;
}

#menu {
    float: right;
    list-style-type: none;
    margin-top: 25px;
    padding-left: 15px;
    display: inline;
    font-size: 110%;
    letter-spacing: 2px;
    color: #3E6E7A;
    background-color: #65B3C7;
    font-weight: bold;
    border: #1F7085 solid 3px;
}

li {
    float: left;
    margin-right: 25px;
}

#menu a {
    color: inherit;
    text-decoration: none;
}

.active {
    border-bottom: solid 1px #3E6E7A;
}

#menu a:hover {
    border: solid 1px #3E6E7A;
}

#menu {
    line-height: 50px;
}

/* Hero Image */
#hero-section {
    background: url(../images/consumer_board_testing.webp) no-repeat center center;
    height: 400px;
    width: 100%;
    clear: both;
}

#hero-image {
    background: url(../images/water_pipes.jpg) no-repeat center center;
    height: 400px;
    width: 100%;
    clear: both;
}

/* Animation for the Hero Image - fading between two pictures every 6 secs. Code modified from an online blog and credited in readme */
#hero-image {
    animation-name: fade;
    animation-timing-function: ease-in-out;
    animation-iteration-count: infinite;
    animation-duration: 6s;
    animation-direction: alternate;
  }
  
@keyframes fade {
    0% {
    opacity: 1;
    }
    25% {
    opacity: 1;
    }
    75% {
    opacity: 0;
    }
    100% {
    opacity: 0;
    }
  }

/* Index About Us*/
#aboutus {
    width: 50%;
    height: 40%;
    text-align: center;
    margin: auto;
    margin-top: 20px;
    clear: both;
    font-size: 150%;
    background-color: #65B3C7;
    color: #244047;
    border: #1F7085 solid 4px;
}

#aboutus h2{
   text-decoration: underline;
   font-size: 120%;
}

/* Index Reviews */
#reviews {
    font-size: 120%;
    text-decoration: underline;
    margin: auto;
    text-align: center;
    color: #244047;
    background-color: #65B3C7;
    width: 45%;
    padding: 10px;
    border: #1F7085 solid 3px;
}

/* Services */
#trade-services {
    margin: auto;
    text-align: center;
    clear: both;
    background-color: #65B3C7;
    width: 45%;
    color: #244047;
    border: #1F7085 solid 3px;
}

#trade-services > h2 {
    font-size: 180%;
    text-decoration: underline;
}

#plumbing-electric {
    display: grid;
    grid-template-columns: 1fr 1fr;
    clear:both;
}

#plumbing-services {
    background: url(../images/plumbing_tools.jpg) no-repeat;
    height: 300px;
    width: 100%;
    margin: auto;
}

#electrical-services {
    background: url(../images/electrician_tools.jpg) no-repeat;
    height: 300px;
    width: 100%;
    margin: auto;
}

#plumbing-services, #electrical-services {
    color: #244047;
    font-size: 120%;
}

/*creates an opaque block over background image for list to sit in */
#plumbing-services > h3, #electrical-services > h3 {
    font-size: 150%;
    text-decoration: underline;
    background-color: rgba(101, 179, 199, .7);
    width: 55%;
    height: 20%;
    border: #1F7085 solid 3px;
    border-bottom: none;
}

.service-list {
    display: block;
    background-color: rgba(101, 179, 199, .7);
    width: 55%;
    height: 50%;
    border: #1F7085 solid 3px;
    border-top: none;
}

.service-list > li {
    float: left;
    clear: left;
    list-style-type: square;
    list-style-position: inside;
}

#why-plumb div , #why-elect div {
    width: 40%;
    height: 10%;
}

#why-plumb h4, #why-elect h4 {
    text-decoration: underline;
    font-weight: bold;
}

#service-description {
    margin: auto;
    clear: both;
    width: 100%;
}

#plumb-list {
    text-align: left;
    float: left;
    width: 50%;
    background-color: #65B3C7;
    color: #244047;
    margin: 10px auto;
}

#elec-list {
    text-align: right;
    float: right;
    width: 50%;
    background-color: #65B3C7;
    color: #244047;
    margin: 10px auto;
}

#plumb-list > details, #elec-list > details {
    border: #1F7085 solid 1px;
}

/* Gallery */
/*creates a flexbox gallery allowing for greater responsive design. Code modified from a stackoverflow query and creditied in readme. */
#photos {
    display: flex;
    flex-wrap: wrap;
    width: 100vw;
    height: auto;
}

#photos > img {
    width: 25%;
    height: auto;
    flex: 0 1 25%;
}

/* Contact Form */
#contact-section {
    clear: both;
    background: url("/assets/images/van.jpg") no-repeat;
    background-size: cover;
    background-position: center;
    height: 900px;
    position: relative;
}

#contact-form {
    background-color: rgba(101, 179, 199, .7);
    height: 40%;
    width: 50%;
    margin: auto;
    text-align: center;
    color: #244047;
    clear: both;
    position: relative;
    top: 10%;
    padding-top: 1%;
    border: #1F7085 solid 3px;
}

.job-input {
    background: transparent;
    border: 1px solid white;
    color: white;
    padding-top: 5px;
}

.quote-button {
    background-color: #3E6E7A;
    color: #244047;
    font-size: 100%;
    padding: 10px 10px 10px 10px;
    border: 1px solid white;
    margin-top: 10px;
}

.quote-button:hover {
    background-color: #7FE1FA;
    color: #244047;
}

/* Direct Contact and Google Map */
#contact-info > h3, #find-us > h3 {
    text-decoration: underline;
}
/* ... */

